Final cleanup of XdType examples.

--- a/RM/3_1_0/notebooks/XdRatio Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdRatio Examples.ipynb
@@ -48,16 +48,16 @@
     "Models a ratio of values, i.e. where the numerator and denominator are both pure numbers. \n",
     "*Should not be used for formulations.* \n",
     "\n",
-    "Used for modeling; ratios, rates or proportions.\n",
+    "Used for modeling; *ratios*, *rates* or *proportions*.\n",
     "\n",
-    "Review the documentation of XdRatioType. Note the class signature requires a *label* (string name) \n"
+    "Review the documentation of XdRatioType."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false,
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -65,6 +65,13 @@
    "outputs": [],
    "source": [
     "help(XdRatioType)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*In the examples below, for completeness, we present the instance data as well as the model parameters. In the code we demonstrate the focus on the model.*"
    ]
   },
   {
@@ -104,12 +111,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# A ratio model\n",
-    "d = XdRatioType(\"Wins vs. Losses\")\n",
-    "d.docs = \"Model a ratio with wins in the numerator and losses in the denominator.\"\n",
-    "d.ratio_type = 'ratio'\n",
+    "# Define the ratio model\n",
+    "ratio = XdRatioType(\"Wins vs. Losses\")\n",
+    "ratio.docs = \"Model a ratio with wins in the numerator and losses in the denominator.\"\n",
+    "ratio.ratio_type = 'ratio'\n",
+    "ratio.defining_url = 'https://en.wikipedia.org/wiki/Odds'\n",
+    "# Define the units\n",
+    "nu = XdStringType('Wins')\n",
+    "nu.defining_url = 'https://www.merriam-webster.com/dictionary/win#2a'\n",
+    "nu.enums = [('Wins', 'https://www.merriam-webster.com/dictionary/win#2a')]\n",
+    "nu.docs = 'Numerator units for Wins vs. Losses'\n",
+    "du = XdStringType('Losses')\n",
+    "du.defining_url = 'https://www.merriam-webster.com/dictionary/loss#4a'\n",
+    "du.enums = [('Losses', 'https://www.merriam-webster.com/dictionary/loss#4a')]\n",
+    "du.docs = 'Denominator units for Wins vs. Losses'\n",
     "\n",
-    "print(d)"
+    "ratio.numerator_units = nu\n",
+    "ratio.denominator_units = du\n",
+    "\n",
+    "print(ratio)"
    ]
   },
   {
@@ -125,9 +145,11 @@
     "\n",
     "Imagine that a shop manager wants to know how many items an average each customer buys, in order to better plan the size of shopping carts or baskets. For that, he would have to know, for a specific period of time, the total number of items purchased in the shop and the number of customer visits (customers that bought something) the shop had in the same period of time. If he sold 15,000 items and had 5,000 customers, the results will be:\n",
     "\n",
-    "Total numbers of items purchased by the costumers      15,000\n",
-    "————————————————————————   =      ————— = 3\n",
-    "Number of customer visits                                                 5,000\n",
+    "\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "\\frac{Total numbers of items purchased by the costumers}{Number of customer visits} = \\frac{15,000}{5,000} = 3\n",
+    "\\end{equation*}\n",
     "\n",
     "Thus, each customer buys in average 3 items each visit to the shop.\n",
     "\n",
@@ -139,9 +161,10 @@
     "\n",
     "Imagine that a company had 150 missing days of work and it has a total of 3,000 worker-days in a given month. We divide 150 by 3,000, which results in 1 missing day for each 20 worker-days, or 0.05/day.\n",
     "\n",
-    "Total number of missing days of work         150              1\n",
-    "—————————————————       = —————  = ——— or 0.05/day\n",
-    "Total number of worker-days                        3,000          20\n"
+    "\n",
+    "\\begin{equation*}\n",
+    "\\frac{Total number of missing days of work}{Total number of worker-days} = \\frac{150}{3,000} = \\frac{1}{20} = 0.05/day\n",
+    "\\end{equation*}\n"
    ]
   },
   {
@@ -151,11 +174,39 @@
    "outputs": [],
    "source": [
     "# A rate model\n",
-    "d = XdRatioType(\"A Rate\")\n",
-    "d.docs = \"Model a rate.\"\n",
-    "d.ratio_type = 'rate'\n",
-    "print(d)"
+    "rate = XdRatioType(\"Items purchased per visit\")\n",
+    "rate.docs = \"Model a rate for the number of items puchased per visit.\"\n",
+    "rate.ratio_type = 'rate'\n",
+    "rate.defining_url = 'https://s3model.com/examples/ippv'\n",
+    "# Define the units\n",
+    "nu = XdStringType('Number of items purchased')\n",
+    "nu.defining_url = 'https://s3model.com/examples/nip'\n",
+    "nu.enums = [('Number of items', 'https://s3model.com/examples/nip')]\n",
+    "nu.docs = 'Numerator units for Items purchased per visit.'\n",
+    "du = XdStringType('Number of visits')\n",
+    "du.defining_url = 'https://s3model.com/examples/niv'\n",
+    "du.enums = [('Numbr of visits', 'https://s3model.com/examples/niv')]\n",
+    "du.docs = 'Denominator units for Items purchased per visit.'\n",
+    "\n",
+    "rate.numerator_units = nu\n",
+    "rate.denominator_units = du\n",
+    "print(rate)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Challenge:**\n",
+    "In the cell below, create a rate model for the second rate example above. Try to find formal definitions online for the model and the units."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -170,9 +221,10 @@
     "\n",
     "The voting turnout is a very good example of proportion, because each citizen can be registered just once in one precinct for a certain election, and the voter can vote just once in a given election. Imagine that in a given precinct there were 1,000 voters registered and 260 showed up to vote. The voting turnout in this precinct was obtained by dividing 260 by 1,000, yielding a voting turnout of 26%.\n",
     "\n",
-    "Number of registered voters that voted         260\n",
-    "——————————————————      =  ————— = 0.26 or 26%\n",
-    "Total number of registered voters                 1,000\n"
+    "\n",
+    "\\begin{equation*}\n",
+    "\\frac{Number of registered voters that voted}{Total number of registered voters} = \\frac{260}{1,000} = 0.26 = 26\\%\n",
+    "\\end{equation*}\n"
    ]
   },
   {
@@ -182,10 +234,23 @@
    "outputs": [],
    "source": [
     "# A proportion model\n",
-    "d = XdRatioType(\"A Proportion\")\n",
-    "d.docs = \"Model a proportion.\"\n",
-    "d.ratio_type = 'proportion'\n",
-    "print(d)"
+    "prop = XdRatioType(\"Voter turnout\")\n",
+    "prop.docs = \"Model a proportion of registered voters that actually voted.\"\n",
+    "prop.ratio_type = 'proportion'\n",
+    "prop.defining_url = 'https://www.fairvote.org/voter_turnout#voter_turnout_101'\n",
+    "# Define the units\n",
+    "nu = XdStringType('Number of registered voters that voted')\n",
+    "nu.defining_url = 'https://en.wikipedia.org/wiki/Voter_registration#voted'\n",
+    "nu.enums = [('Voted', 'https://en.wikipedia.org/wiki/Voter_registration#voted')]\n",
+    "nu.docs = 'Numerator units for Voter turnout.'\n",
+    "du = XdStringType('Number of registered voters')\n",
+    "du.defining_url = 'https://en.wikipedia.org/wiki/Voter_registration#registered'\n",
+    "du.enums = [('Registered', 'https://en.wikipedia.org/wiki/Voter_registration#registered')]\n",
+    "du.docs = 'Denominator units for Voter turnout.'\n",
+    "\n",
+    "prop.numerator_units = nu\n",
+    "prop.denominator_units = du\n",
+    "print(prop)"
    ]
   },
   {
@@ -214,13 +279,6 @@
     "\n",
     "This is why the S3Model approach is so insistent about defining as precisely as possible the spatial and temporal contexts.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
