--- a/RM/3_1_0/notebooks/XdString Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdString Examples.ipynb
@@ -45,7 +45,7 @@
     }
    },
    "source": [
-    "Review the documentation of XdStringType. Note the class signature requires a *label* (string name)."
+    "Review the documentation of XdStringType."
    ]
   },
   {
