--- a/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
+++ b/RM/3_1_0/notebooks/XdTemporal Examples.ipynb
@@ -45,7 +45,7 @@
     }
    },
    "source": [
-    "Review the documentation of XdRatioType. Note the class signature requires a *label* (string name) \n"
+    "Review the documentation of XdRatioType."
    ]
   },
   {
